# booklink

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-qa.yml  ruff.yml  tests.yml  type-checking.yml
BookLink/: __init__.py  api.py  ebookfile.py  fileregister.py  frontend.py  pairing.py  utils.py
BookLink/templates/: pair.html  pair_configuration.html  pair_for_ereader.html  pair_for_sender_device.html  simple_pair.html
src/booklink/: __init__.py  application_service.py  channel.py  client.py  ebookfile.py  fileregister.py  pair_devices.py  pairingregister.py  security.py  show_online.py  storage.py  transfer_files.py  utils.py
src/booklink/flask_app/: __init__.py  api.py  frontend.py  utils.py
src/booklink/flask_app/templates/: base.html  landing_page.html  pair.html  pair_configuration.html  send.html  simple_pair.html  simple_receive.html
src/booklink/templates/: base.html
tests/: test_api.py  test_application_service.py  test_channel.py  test_client.py  test_ebookfile.py  test_fileregister.py  test_pair_devices.py  test_pairing.py  test_pairingregister.py  test_security.py  test_show_online.py  test_storage.py  test_transfer_files.py  test_utils.py
tests/flask_app/: test_api.py  test_frontend.py
tests/test_ebooks/: frankenstein.epub
