[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "booklink"
version = "0.1.0"
description = "A web service to transfer ebooks to e-readers"
authors = [
    {name = "Philip Carlo Lueghausen"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>3.0.0",
    "pyjwt>1.0.0",
    "lxml>=5.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100

[tool.isort]
force_grid_wrap = 2  # Use grid style wrapping for imports when there are 2 or more
multi_line_output = 3  # Place each import on its own line
include_trailing_comma = true
